tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_unconstrained_type_parameter_in_impl/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: The type parameter `U` is not constrained by the impl trait, self type, or predicates
  ┌─ src/main.nr:4:17
  │
4 │         impl<T, U> Foo<T> {}
  │                 - Hint: remove the `U` type parameter
  │

Aborting due to 1 previous error
